infrastructure/vanguard/longhorn/dashboard/basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-basicauth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-dashboard-auth
